--- a/src/css/includes/_button.scss
+++ b/src/css/includes/_button.scss
@@ -2,9 +2,7 @@
     font: inherit;
     padding: 5px 14px 4px;
     margin-bottom: 5px;
-    vertical-align: middle;
     color: $default;
-    line-height: 1.42;
     text-align: center;
     border: 1px solid darken($light, 5);
     background: $light;
